<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameModeMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GameModeMenuFragment"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btnSinglePlayer"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:background="@drawable/effect_button"
        android:fontFamily="@font/londrina_solid"
        android:text="@string/singleplayer"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameMode"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/btnMultiPlayer"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/effect_button"
        android:fontFamily="@font/londrina_solid"
        android:text="@string/multiplayer"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSinglePlayer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvGameMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/londrina_solid"
        android:text="@string/select_game_mode"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/btnCustomLevel"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:background="@drawable/effect_button"
        android:fontFamily="@font/londrina_solid"
        android:text="@string/custom_level"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiPlayer"
        app:layout_constraintVertical_bias="0.131" />

    <ImageView
        android:id="@+id/ivBackMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/effect_button_image"
        android:maxWidth="65dp"
        android:maxHeight="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <View
        android:id="@+id/vSeparatorSelectMode"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameMode" />
</androidx.constraintlayout.widget.ConstraintLayout>